--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>localhost.gibsgibs</groupId>
+	<groupId>com.github.gibsgibs</groupId>
 	<artifactId>server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>server</name>
